@startuml Inventory_Order_Management_ER

skinparam linetype ortho
skinparam entity {
    BackgroundColor #FFFDE7
    BorderColor     #B8860B
    FontName        Arial
}
skinparam arrow {
    Color      Black
    FontName   Arial
    FontSize   11
}

' ──────────────────────────────────────────
' ENTITIES
' ──────────────────────────────────────────

entity "Customer" as Customer {
    * **Customer_ID** : INTEGER  <<PK, AUTO_INCREMENT>>
    ==
    Fname         : VARCHAR(100)
    Email         : VARCHAR(255)
    Address       : VARCHAR(255)
    Created_date  : DATE
    loginPassword : VARCHAR(100)
}

entity "C_Order" as COrder {
    * **Order_ID** : INTEGER  <<PK, AUTO_INCREMENT>>
    ==
    * Customer_ID  : INTEGER  <<FK>>
      Shipment_ID  : INTEGER  <<FK, NULL>>
      Order_status : ENUM('Pending','Preparing','In-Transit','Delivered')
      Total_amount : DECIMAL(10,2)
      Order_date   : DATETIME
}

entity "Order_Item" as OrderItem {
    * **Order_ID**   : INTEGER  <<PK, FK>>
    * **Product_ID** : INTEGER  <<PK, FK>>
    ==
    Quantity   : INTEGER
    Unit_price : DECIMAL(10,2)
}

entity "Product" as Product {
    * **Product_ID** : INTEGER  <<PK, AUTO_INCREMENT>>
    ==
    P_name         : VARCHAR(100)
    Category       : VARCHAR(100)
    Price          : DECIMAL(10,2)
    Stock_quantity : INTEGER
    Reorder_level  : INTEGER
    Weight_kg      : DECIMAL(5,2)
}

entity "Shipment" as Shipment {
    * **Shipment_ID** : INTEGER  <<PK, AUTO_INCREMENT>>
    ==
    * Carrier_ID      : INTEGER  <<FK>>
      Tracking_number : VARCHAR(50)
      Ship_date        : DATE
      Shipment_status  : ENUM('Preparing','In-Transit','Delivered')
      Shipping_cost    : DECIMAL(10,2)
}

entity "Carrier" as Carrier {
    * **Carrier_ID** : INTEGER  <<PK>>
    ==
    Carrier_Name : VARCHAR(100)
    Contact_info : VARCHAR(255)
    Base_rate    : DECIMAL(10,2)
    Rate_per_kg  : DECIMAL(10,2)
}

' ──────────────────────────────────────────
' RELATIONSHIPS  (pure Crow's Foot notation)
'
'  ||  = exactly one
'  o{  = zero or many
'  |{  = one or many
' ──────────────────────────────────────────

' One Customer places zero-or-many Orders
Customer   ||--o{ COrder    : "places >"

' One Shipment groups one-or-many Orders
Shipment   ||--o{ COrder    : "< grouped in"

' One Carrier handles zero-or-many Shipments
Carrier    ||--o{ Shipment  : "handles >"

' Order_Item resolves the M:N between C_Order and Product.
' (Composite PK = Order_ID + Product_ID)
COrder     ||--|{ OrderItem : "contains >"
Product    ||--|{ OrderItem : "< included in"

@enduml
